@@ -14,6 +14,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @NonNls public class YandexTraslate extends JavaModule {
     @NonNls private static final String KEY =
@@ -38,14 +39,14 @@ import java.net.URLEncoder;
         URLConnection connection = url.openConnection();
         connection.setDoOutput(true);
         try (DataOutputStream dataOutputStream = new DataOutputStream(connection.getOutputStream())) {
-            dataOutputStream.writeBytes("text=" + URLEncoder.encode(input, "UTF-8") + "&lang=" + lang);//StandardCharsets.UTF_8
+            dataOutputStream.writeBytes("text=" + URLEncoder.encode(input, StandardCharsets.UTF_8) + "&lang=" + lang);
             try (InputStream response = connection.getInputStream(); ByteArrayOutputStream result = new ByteArrayOutputStream()) {
                 byte[] buffer = new byte[1024];
                 int length;
                 while ((length = response.read(buffer)) != -1) {
                     result.write(buffer, 0, length);
                 }
-                String json = result.toString("UTF-8");//StandardCharsets.UTF_8
+                String json = result.toString(StandardCharsets.UTF_8);//StandardCharsets.UTF_8
                 builder.append(json, json.indexOf('[') + 2, json.indexOf(']') - 1);
 
             }
